Adding a longer evaluation

--- a/src/reddit.ipynb
+++ b/src/reddit.ipynb
@@ -357,6 +357,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "def long_evaluation(companies: List[str]):\n",
+    "    thread_lists = [reddit_search(company, stop=10, pause=2)[:3] for company in companies]\n",
+    "\n",
+    "    test_id = hashlib.sha256((str(companies) + str(thread_lists)).encode()).hexdigest()[-4:]\n",
+    "\n",
+    "    folder = f\"evaluation/test_{test_id}\"\n",
+    "    os.makedirs(folder, exist_ok=True)\n",
+    "\n",
+    "    html_result = summarize_prompt(prompt)\n",
+    "\n",
+    "    for company, results in zip(companies, thread_lists):\n",
+    "        html_result += f\"<h1>{company}</h1>\"\n",
+    "        results = [process_url(url) for url in results]\n",
+    "        html_result += \"\\n\".join(r.to_html() for r in results)\n",
+    "\n",
+    "    # Create the filename using the current timestamp\n",
+    "    timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
+    "    filename = f\"{folder}/{timestamp}.html\"\n",
+    "\n",
+    "    with open(filename, \"w\") as f:\n",
+    "        f.write(html_result)\n",
+    "\n",
+    "long_evaluation([\"98point6\", \"Rad AI\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
