Adding evaluation, prepping for refactor

--- a/src/reddit.ipynb
+++ b/src/reddit.ipynb
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,6 +567,29 @@
     "\n",
     "    # outputs\n",
     "    summary_result: AIMessage\n",
+    "\n",
+    "    def evaluate(self) -> Evaluation:\n",
+    "        claims_made = 0\n",
+    "        quotes_in_source = 0\n",
+    "        comment_ids_in_source = 0\n",
+    "\n",
+    "        for claim in chain(\n",
+    "            self.summary_result.user_experience_strengths or [],\n",
+    "            self.summary_result.user_experience_weaknesses or [],\n",
+    "            self.summary_result.employee_experience_strengths or [],\n",
+    "            self.summary_result.employee_experience_weaknesses or [],\n",
+    "            self.summary_result.investor_perspective or [],\n",
+    "        ):\n",
+    "\n",
+    "            claims_made += 1\n",
+    "            \n",
+    "            if claim.quote in self.aggregation_prompt_context:\n",
+    "                quotes_in_source += 1\n",
+    "\n",
+    "            if claim.comment_id in self.aggregation_prompt_context:\n",
+    "                comment_ids_in_source += 1\n",
+    "\n",
+    "        return Evaluation(claims_made, quotes_in_source, comment_ids_in_source)\n",
     "\n",
     "    def to_html(self):\n",
     "        summary_content = self.summary_result\n",
@@ -1406,14 +1429,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Results for CompanyProduct(company='Rad AI', product='Omni') saved to evaluation/test_158f/20240728_182343.html\n"
+      "Results for CompanyProduct(company='98point6', product='98point6') saved to evaluation/test_9a15/20240728_203856.html\n"
      ]
     }
    ],
@@ -1446,6 +1469,10 @@
     "\n",
     "<h1>Debugging the aggregation</h1>\n",
     "\n",
+    "<h2>Hallucination evaluation</h2>\n",
+    "Note: This only evaluates the evaluation stage, not the mapping stage.\n",
+    "{aggregation_result.evaluate()}\n",
+    "\n",
     "<h2>Aggregation prompt</h2>\n",
     "{summarize_prompt(aggregation_prompt)}\n",
     "\n",
@@ -1474,7 +1501,7 @@
     "\n",
     "    print(f\"Results for {target} saved to {filename}\")\n",
     "\n",
-    "short_evaluation(CompanyProduct(\"Rad AI\", \"Omni\"), 5)\n"
+    "short_evaluation(CompanyProduct.same(\"98point6\"), 5)\n"
    ]
   },
   {
