Extracting core data structure and reddit client

--- a/src/reddit.ipynb
+++ b/src/reddit.ipynb
@@ -11,70 +11,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "CompanyProduct(company='98point6', product='98point6')"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from typing import NamedTuple\n",
-    "\n",
-    "class CompanyProduct(NamedTuple):\n",
-    "    company: str\n",
-    "    product: str\n",
-    "\n",
-    "    @classmethod\n",
-    "    def same(cls, name: str):\n",
-    "        return cls(company=name, product=name)\n",
-    "    \n",
-    "CompanyProduct.same(\"98point6\")"
+    "from core import CompanyProduct"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import praw\n",
-    "from dotenv import load_dotenv\n",
-    "import os\n",
-    "\n",
-    "load_dotenv()\n",
-    "\n",
-    "reddit = praw.Reddit(\n",
-    "    client_id=os.environ[\"REDDIT_CLIENT_ID\"],\n",
-    "    client_secret=os.environ[\"REDDIT_CLIENT_SECRET\"],\n",
-    "    user_agent=\"Comment Extraction (by u/trnka)\",\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Design notes\n",
-    "\n",
-    "1. Transform the product name into an appropriate query\n",
-    "2. Google search reddit.com with the query (possibly multiple time windows - alltime, 1y, 1m?)\n",
-    "3. Process each post:\n",
-    "    - Pull the top post\n",
-    "    - Pull any comments\n",
-    "    - Identify whether the post is primarily about the product, jobs at the company, or bizdev\n",
-    "4. Summarize the product-related posts:\n",
-    "    - Timeline of posts with titles and one key excerpt, linking to the original. Also include the amount of activity on the post and the score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,12 +26,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "# Post 11twe7z:  Prompt to summarize by AlarmedJury7058 on 2023-03-17 [+26 votes]\n",
+      "# Post 11twe7z:  Prompt to summarize by AlarmedJury7058 on 2023-03-17 [+25 votes]\n",
       "Hey, what’s the best prompt to ask Chatgpt to summarize a text with details ?\n",
       "\n",
       "\n",
       "\n",
-      "## Comment jcm7h9z by SpiritualCopy4288 on 2023-03-17 [+32 votes] (in reply to 11twe7z):\n",
+      "## Comment jcm7h9z by SpiritualCopy4288 on 2023-03-17 [+30 votes] (in reply to 11twe7z):\n",
       "Here’s a few\n",
       "\n",
       "“Could you please provide a concise and comprehensive summary of the given text? The summary should capture the main points and key details of the text while conveying the author's intended meaning accurately. Please ensure that the summary is well-organized and easy to read, with clear headings and subheadings to guide the reader through each section. The length of the summary should be appropriate to capture the main points and key details of the text, without including unnecessary information or becoming overly long.”\n",
@@ -99,7 +43,7 @@
       "### Comment jf2x8tv by theavideverything on 2023-04-05 [+4 votes] (in reply to jcm7h9z):\n",
       "Hey thank you so much! I *really* like the 2nd prompt will use it daily now. Could you please share how you came up with these prompts?\n",
       "\n",
-      "#### Comment jf3qdny by SpiritualCopy4288 on 2023-04-05 [+21 votes] (in reply to jf2x8tv):\n",
+      "#### Comment jf3qdny by SpiritualCopy4288 on 2023-04-05 [+22 votes] (in reply to jf2x8tv):\n",
       "I got them by using this prompt I made:\n",
       "\n",
       "“Dear ChatGPT,\n",
@@ -147,50 +91,12 @@
     }
    ],
    "source": [
-    "# Helper to convert a Reddit thread to text\n",
-    "from datetime import datetime\n",
-    "from praw.models import MoreComments\n",
+    "import reddit\n",
     "\n",
-    "DATE_FORMAT = \"%Y-%m-%d\"\n",
-    "def utc_to_date(utc: float):\n",
-    "    return datetime.utcfromtimestamp(utc).strftime(DATE_FORMAT)\n",
+    "reddit_client = reddit.init()\n",
     "\n",
-    "def include_comment(comment):\n",
-    "    \"\"\"Decide whether to include a comment in the output\"\"\"\n",
-    "    return not isinstance(comment, MoreComments) and not comment.stickied and comment.score > 0\n",
-    "\n",
-    "def format_comment_forest(comment, level=1, parent_id=None, max_depth=4):\n",
-    "    \"\"\"\n",
-    "    Recursively format a Reddit comment tree into a markdown-like text with basic filtering and depth control.\n",
-    "    \"\"\"\n",
-    "    if not include_comment(comment) or level > max_depth:\n",
-    "        return \"\"\n",
-    "\n",
-    "    parent_header = f\" (in reply to {parent_id})\" if parent_id else \"\"\n",
-    "    text = f\"{'#' * level} Comment {comment.id} by {comment.author} on {utc_to_date(comment.created_utc)} [{comment.score:+d} votes]{parent_header}:\\n\"\n",
-    "    text += f\"{comment.body}\\n\\n\"\n",
-    "\n",
-    "    text += \"\\n\\n\".join(format_comment_forest(reply, level + 1, parent_id=comment.id) for reply in comment.replies)\n",
-    "\n",
-    "    return text\n",
-    "\n",
-    "def format_reddit_thread(submission, pagination_limit=10):\n",
-    "    \"\"\"\n",
-    "    Format a Reddit thread into a markdown-like text with basic filtering and depth control.\n",
-    "    \"\"\"\n",
-    "    submission.comments.replace_more(limit=pagination_limit)\n",
-    "\n",
-    "    text = f\"\"\"\n",
-    "# Post {submission.id}:  {submission.title} by {submission.author} on {utc_to_date(submission.created_utc)} [{submission.score:+d} votes]\n",
-    "{submission.selftext}\n",
-    "\n",
-    "\"\"\"\n",
-    "    \n",
-    "    text += \"\\n\\n\".join(format_comment_forest(reply, 2, parent_id=submission.id) for reply in submission.comments)\n",
-    "    return text\n",
-    "\n",
-    "submission = reddit.submission(url=\"https://www.reddit.com/r/ChatGPT/comments/11twe7z/prompt_to_summarize/\")\n",
-    "print(format_reddit_thread(submission))"
+    "submission = reddit_client.submission(url=\"https://www.reddit.com/r/ChatGPT/comments/11twe7z/prompt_to_summarize/\")\n",
+    "print(reddit.submission_to_markdown(submission))"
    ]
   },
   {
