Step 1 refactor: Demo of a singular summary

--- a/src/reddit.ipynb
+++ b/src/reddit.ipynb
@@ -207,6 +207,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "# Summary: Internet medicine is awesome, 98point6 was so so helpful for me (thread id: bg7ip2)\n",
+      "\n",
+      "The Reddit thread discusses user experiences with 98point6, an online medical service that provides affordable consultations and prescriptions. Users share positive experiences regarding accessibility and cost-effectiveness, while some express concerns about limitations in prescribing certain medications.\n",
+      "\n",
+      "## User Experience\n",
+      "\n",
+      "### Strengths\n",
+      "\n",
+      "- \"It was amazing. ... I would 100% use 98point6 again, especially since my $20 gets me unlimited visits for a year.\" (source: bg7ip2)\n",
+      "- \"This amazing awesome doctor ... was actively prepared to address the needs of people who have limited funds.\" (source: bg7ip2)\n",
+      "- \"Helped me get paxlovid for covid more quickly than I otherwise would have been able to.\" (source: idl52u3)\n",
+      "\n",
+      "### Weaknesses\n",
+      "\n",
+      "- \"My husband and I have used 98.6 three times. ... I would not recommend them!\" (source: hrmpl3t)\n",
+      "- \"It's not a 'this solves all your problems' thing, but it might be a 'this solves some of your problems this week' thing.\" (source: eljexpb)\n",
+      "\n",
+      "## Employee Experience\n",
+      "\n",
+      "### Strengths\n",
+      "\n",
+      "Not applicable\n",
+      "\n",
+      "### Weaknesses\n",
+      "\n",
+      "Not applicable\n",
+      "\n",
+      "## Investor Perspective\n",
+      "\n",
+      "Not applicable\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "import reddit\n",
+    "from reddit_summarizer import summarize_submission, summary_to_markdown\n",
+    "from core import CompanyProduct\n",
+    "\n",
+    "def tiny_test(target: CompanyProduct):\n",
+    "    reddit_client = reddit.init()\n",
+    "\n",
+    "    # Search for URLs\n",
+    "    post_url = reddit.find_submission_urls(target, num_results=10)[0]\n",
+    "\n",
+    "    # Fetch the Submissions from Reddit\n",
+    "    post_submission = reddit_client.submission(url=post_url)\n",
+    "\n",
+    "    # Summarize each\n",
+    "    return summarize_submission(target, post_submission)\n",
+    "\n",
+    "summary = tiny_test(CompanyProduct.same(\"98point6\"))\n",
+    "\n",
+    "print(summary_to_markdown(summary))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The refactored version\n",
+    "\n",
+    "def short_test(target: CompanyProduct, num_posts: int = 10):\n",
+    "    reddit_client = reddit.init()\n",
+    "\n",
+    "    # Search for URLs\n",
+    "    post_urls = reddit.find_submission_urls(reddit_client, target, num_results=num_posts)\n",
+    "\n",
+    "    # Fetch the Submissions from Reddit\n",
+    "    post_submissions = [reddit_client.submission(url=url) for url in post_urls]\n",
+    "\n",
+    "    # Summarize each\n",
+    "    post_summaries = [summarize_submission(submission) for submission in post_submissions]\n",
+    "\n",
+    "    # Aggregate the summaries\n",
+    "    aggregate_summary = summarize_summaries(post_summaries)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
@@ -257,11 +347,11 @@
    "source": [
     "from core import CompanyProduct\n",
     "import reddit\n",
-    "from reddit_summarizer import thread_summary_prompt, json_instructions, ThreadResult, summary_to_markdown, llm\n",
+    "from reddit_summarizer import thread_summary_prompt, json_instructions, ThreadSummary, summary_to_markdown, llm\n",
     "\n",
     "reddit_client = reddit.init()\n",
     "\n",
-    "def summarize_thread(target: CompanyProduct, url: str, text_max_chars=40000) -> ThreadResult:\n",
+    "def summarize_thread(target: CompanyProduct, url: str, text_max_chars=40000) -> ThreadSummary:\n",
     "    submission = reddit_client.submission(url=url)\n",
     "    text = reddit.submission_to_markdown(submission)\n",
     "\n",
@@ -271,32 +361,12 @@
     "    \n",
     "    runnable = thread_summary_prompt | llm.with_structured_output(schema=ThreadSummary, method=\"json_mode\")\n",
     "    summary_result = runnable.invoke({\"text\": text, \"company\": target.company, \"product\": target.product, \"json_instructions\": json_instructions})\n",
-    "    return ThreadResult(submission=submission, text=text, summary_result=summary_result)\n",
+    "    return ThreadSummary(submission=submission, text=text, summary_result=summary_result)\n",
     "\n",
     "\n",
     "summary = summarize_thread(CompanyProduct(\"Singularity 6\", \"Palia\"), \"https://www.reddit.com/r/MMORPG/comments/1bz2e0z/palia_developers_singularity_6_axes_35_of_staff/\")\n",
     "\n",
     "print(summary_to_markdown(summary))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Evaluation(claims_made=12, quotes_in_source=6, comment_ids_in_source=12)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "summary.evaluate()"
    ]
   },
   {
