--- a/src/reddit.ipynb
+++ b/src/reddit.ipynb
@@ -1,116 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Reddit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from core import CompanyProduct"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "# Post 11twe7z:  Prompt to summarize by AlarmedJury7058 on 2023-03-17 [+25 votes]\n",
-      "Hey, what’s the best prompt to ask Chatgpt to summarize a text with details ?\n",
-      "\n",
-      "\n",
-      "\n",
-      "## Comment jcm7h9z by SpiritualCopy4288 on 2023-03-17 [+31 votes] (in reply to 11twe7z):\n",
-      "Here’s a few\n",
-      "\n",
-      "“Could you please provide a concise and comprehensive summary of the given text? The summary should capture the main points and key details of the text while conveying the author's intended meaning accurately. Please ensure that the summary is well-organized and easy to read, with clear headings and subheadings to guide the reader through each section. The length of the summary should be appropriate to capture the main points and key details of the text, without including unnecessary information or becoming overly long.”\n",
-      "\n",
-      "“Can you provide a comprehensive summary of the given text? The summary should cover all the key points and main ideas presented in the original text, while also condensing the information into a concise and easy-to-understand format. Please ensure that the summary includes relevant details and examples that support the main ideas, while avoiding any unnecessary information or repetition. The length of the summary should be appropriate for the length and complexity of the original text, providing a clear and accurate overview without omitting any important information.”\n",
-      "\n",
-      "“Could you please provide a summary of the given text, including all key points and supporting details? The summary should be comprehensive and accurately reflect the main message and arguments presented in the original text, while also being concise and easy to understand. To ensure accuracy, please read the text carefully and pay attention to any nuances or complexities in the language. Additionally, the summary should avoid any personal biases or interpretations and remain objective and factual throughout.\n",
-      "\n",
-      "### Comment jf2x8tv by theavideverything on 2023-04-05 [+4 votes] (in reply to jcm7h9z):\n",
-      "Hey thank you so much! I *really* like the 2nd prompt will use it daily now. Could you please share how you came up with these prompts?\n",
-      "\n",
-      "#### Comment jf3qdny by SpiritualCopy4288 on 2023-04-05 [+21 votes] (in reply to jf2x8tv):\n",
-      "I got them by using this prompt I made:\n",
-      "\n",
-      "“Dear ChatGPT,\n",
-      "\n",
-      "I would like to request your assistance in creating an AI-powered prompt rewriter, which can help me rewrite and refine prompts that I intend to use with you, ChatGPT, for the purpose of obtaining improved responses. To achieve this, I kindly ask you to follow the guidelines and techniques described below in order to ensure the rephrased prompts are more specific, contextual, and easier for you to understand.\n",
-      "\n",
-      "Identify the main subject and objective: Examine the original prompt and identify its primary subject and intended goal. Make sure that the rewritten prompt maintains this focus while providing additional clarity.\n",
-      "\n",
-      "Add context: Enhance the original prompt with relevant background information, historical context, or specific examples, making it easier for you to comprehend the subject matter and provide more accurate responses.\n",
-      "\n",
-      "Ensure specificity: Rewrite the prompt in a way that narrows down the topic or question, so it becomes more precise and targeted. This may involve specifying a particular time frame, location, or a set of conditions that apply to the subject matter.\n",
-      "\n",
-      "Use clear and concise language: Make sure that the rewritten prompt uses simple, unambiguous language to convey the message, avoiding jargon or overly complex vocabulary. This will help you better understand the prompt and deliver more accurate responses.\n",
-      "\n",
-      "Incorporate open-ended questions: If the original prompt contains a yes/no question or a query that may lead to a limited response, consider rephrasing it into an open-ended question that encourages a more comprehensive and informative answer.\n",
-      "\n",
-      "Avoid leading questions: Ensure that the rewritten prompt does not contain any biases or assumptions that may influence your response. Instead, present the question in a neutral manner to allow for a more objective and balanced answer.\n",
-      "\n",
-      "Provide instructions when necessary: If the desired output requires a specific format, style, or structure, include clear and concise instructions within the rewritten prompt to guide you in generating the response accordingly.\n",
-      "\n",
-      "Ensure the prompt length is appropriate: While rewriting, make sure the prompt is neither too short nor too long. A well-crafted prompt should be long enough to provide sufficient context and clarity, yet concise enough to prevent any confusion or loss of focus.\n",
-      "\n",
-      "With these guidelines in mind, I would like you to transform yourself into a prompt rewriter, capable of refining and enhancing any given prompts to ensure they elicit the most accurate, relevant, and comprehensive responses when used with ChatGPT. Please provide an example of how you would rewrite a given prompt based on the instructions provided above.\n",
-      "\n",
-      "Rewrite this prompt: “please generate a detailed summary of the given text”\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "### Comment kwo1bpp by map-guy on 2024-03-26 [+2 votes] (in reply to jcm7h9z):\n",
-      "Just found this. Exactly what I was looking for. Thanks!\n",
-      "\n",
-      "\n",
-      "\n",
-      "## Comment l16umyv by Sudden_One_4514 on 2024-04-25 [+1 votes] (in reply to 11twe7z):\n",
-      "Are you looking for code or just a prompt? If it's a document then I would suggest trying chatpdf!\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "import reddit\n",
-    "\n",
-    "reddit.test_submission()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Summarize with LangChain"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Google Search on Reddit for sources"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -119,105 +9,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.reddit.com/r/MMORPG/comments/1bz2e0z/palia_developers_singularity_6_axes_35_of_staff/\n",
-      "https://www.reddit.com/r/MMORPG/comments/1dtp97n/daybreak_acquires_singularity_6_palia_developer/\n",
-      "https://www.reddit.com/r/pcgaming/comments/1bwiuin/cozy_mmo_palia_developer_singularity_6_has/\n",
-      "https://www.reddit.com/r/CozyGamers/comments/1dt80wx/daybreak_acquires_singularity_6_developer_of_palia/\n",
-      "https://www.reddit.com/r/Palia/comments/15ss9gg/singularity_6_is_not_an_indie_company/\n",
-      "https://www.reddit.com/r/Palia/comments/1dt8dbs/palia_studio_singularity_6_acquired_by_daybreak/\n",
-      "https://www.reddit.com/r/Palia/comments/19bqfoy/cant_even_give_singularity_6_my_money/\n",
-      "https://www.reddit.com/r/MMORPG/comments/obkdoi/singularity_6_raises_30m_to_fund_debut_mmo_game/\n",
-      "https://www.reddit.com/r/Palia/comments/1dt7ujt/daybreak_game_company/\n",
-      "https://www.reddit.com/r/Games/comments/1cu1f7i/palia_studio_singularity_6_confirms_36_workers/\n",
-      "https://www.reddit.com/r/Palia/comments/18zqxpx/please_singularity_6/\n",
-      "https://www.reddit.com/r/Palia/comments/1ctgcw1/more_layoffs_at_s6_teams_down_to_a_few_dozen/\n",
-      "https://www.reddit.com/r/Palia/comments/1650bkg/we_are_singularity_6_developers_and_publishers_of/\n",
-      "https://www.reddit.com/r/PaliaMMO/comments/qn2pqo/singularity_6_is_hiring_like_crazy_for_palia/\n",
-      "https://www.reddit.com/r/Games/comments/nribi0/singularity_6s_palia_is_a_relaxing_mmo/\n",
-      "https://www.reddit.com/r/Palia/comments/1659f6w/list_of_answers_from_singularity_6/\n",
-      "https://www.reddit.com/r/Palia/comments/15sufww/repost_open_up_your_eyes/\n",
-      "https://www.reddit.com/r/gamingnews/comments/1cu56tf/palia_studio_singularity_6_has_laid_off_36/\n",
-      "https://www.reddit.com/r/Palia/comments/15j7jvc/shout_out_to_singularity_6_team_for_making_a_game/\n"
-     ]
-    }
-   ],
-   "source": [
-    "from reddit import test_search\n",
-    "\n",
-    "test_search()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'title': 'ThreadSummary',\n",
-       " 'description': 'A structured summary of a Reddit thread or threads about a company or product',\n",
-       " 'type': 'object',\n",
-       " 'properties': {'thread_summary': {'title': 'Thread Summary',\n",
-       "   'description': 'An overview of the content',\n",
-       "   'type': 'string'},\n",
-       "  'user_experience_strengths': {'title': 'User Experience Strengths',\n",
-       "   'description': 'Key positive themes in user feedback about the product',\n",
-       "   'type': 'array',\n",
-       "   'items': {'$ref': '#/definitions/Claim'}},\n",
-       "  'user_experience_weaknesses': {'title': 'User Experience Weaknesses',\n",
-       "   'description': 'Key negative themes in user feedback about the product',\n",
-       "   'type': 'array',\n",
-       "   'items': {'$ref': '#/definitions/Claim'}},\n",
-       "  'employee_experience_strengths': {'title': 'Employee Experience Strengths',\n",
-       "   'description': 'The key strengths of the company from the employee perspective',\n",
-       "   'type': 'array',\n",
-       "   'items': {'$ref': '#/definitions/Claim'}},\n",
-       "  'employee_experience_weaknesses': {'title': 'Employee Experience Weaknesses',\n",
-       "   'description': 'The key weaknesses of the company from the employee perspective',\n",
-       "   'type': 'array',\n",
-       "   'items': {'$ref': '#/definitions/Claim'}},\n",
-       "  'investor_perspective': {'title': 'Investor Perspective',\n",
-       "   'description': 'Key information about the company from the perspective of a prospective investor',\n",
-       "   'type': 'array',\n",
-       "   'items': {'$ref': '#/definitions/Claim'}}},\n",
-       " 'required': ['thread_summary'],\n",
-       " 'definitions': {'Claim': {'title': 'Claim',\n",
-       "   'description': 'A claim made in a Reddit thread',\n",
-       "   'type': 'object',\n",
-       "   'properties': {'quote': {'title': 'Quote',\n",
-       "     'description': 'A short quote from the source representing the key claim',\n",
-       "     'type': 'string'},\n",
-       "    'comment_id': {'title': 'Comment Id',\n",
-       "     'description': 'The comment ID of the quote',\n",
-       "     'type': 'string'}},\n",
-       "   'required': ['quote', 'comment_id']}}}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from reddit_summarizer import ThreadSummary\n",
-    "\n",
-    "ThreadSummary.schema()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
       "# Summary: Internet medicine is awesome, 98point6 was so so helpful for me (thread id: bg7ip2)\n",
       "\n",
-      "The Reddit thread discusses user experiences with 98point6, an online medical service that provides affordable consultations and prescriptions. Users share positive experiences regarding accessibility and cost-effectiveness, while some express concerns about limitations in prescribing certain medications.\n",
+      "The Reddit thread discusses user experiences with 98point6, an online medical service that provides affordable consultations and prescriptions. Users share positive experiences regarding accessibility and affordability, while some express concerns about limitations in prescribing certain medications.\n",
       "\n",
       "## User Experience\n",
       "\n",
@@ -227,34 +21,37 @@
       "- \"This amazing awesome doctor ... was actively prepared to address the needs of people who have limited funds.\" (source: bg7ip2)\n",
       "- \"Helped me get paxlovid for covid more quickly than I otherwise would have been able to.\" (source: idl52u3)\n",
       "\n",
+      "\n",
       "### Weaknesses\n",
       "\n",
-      "- \"My husband and I have used 98.6 three times. ... I would not recommend them!\" (source: hrmpl3t)\n",
-      "- \"It's not a 'this solves all your problems' thing, but it might be a 'this solves some of your problems this week' thing.\" (source: eljexpb)\n",
+      "- \"My husband and I have used 98.6 three times. All three times they did not prescribe the needed antibiotic to get better.\" (source: hrmpl3t)\n",
+      "- \"It's not the right place to go for a broken arm, but for prescription anti-inflammatories or antibiotics for your 3rd UTI of the year or something pretty basic it's a good low cost option.\" (source: bg7ip2)\n",
+      "\n",
       "\n",
       "## Employee Experience\n",
       "\n",
       "### Strengths\n",
       "\n",
-      "Not applicable\n",
+      "\n",
       "\n",
       "### Weaknesses\n",
       "\n",
-      "Not applicable\n",
+      "\n",
       "\n",
       "## Investor Perspective\n",
       "\n",
-      "Not applicable\n",
-      "    \n"
+      "\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "import reddit\n",
-    "from reddit_summarizer import summarize_submission, summary_to_markdown\n",
+    "from reddit_summarizer import summarize_submission\n",
     "from core import CompanyProduct\n",
     "\n",
-    "def tiny_test(target: CompanyProduct):\n",
+    "def test_single_summary(target: CompanyProduct):\n",
     "    reddit_client = reddit.init()\n",
     "\n",
     "    # Search for URLs\n",
@@ -266,9 +63,9 @@
     "    # Summarize each\n",
     "    return summarize_submission(target, post_submission)\n",
     "\n",
-    "summary = tiny_test(CompanyProduct.same(\"98point6\"))\n",
+    "summary = test_single_summary(CompanyProduct.same(\"98point6\"))\n",
     "\n",
-    "print(summary_to_markdown(summary))"
+    "print(summary.to_markdown())"
    ]
   },
   {
