Adding simple content filters

--- a/src/reddit.ipynb
+++ b/src/reddit.ipynb
@@ -357,19 +357,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Results for CompanyProduct(company='98point6', product='98point6') saved to evaluation/98point6_98point6/20240729_100540.html\n"
+      "Results for CompanyProduct(company='98point6', product='98point6') saved to evaluation/98point6_98point6/20240729_112250.html\n"
      ]
     }
    ],
    "source": [
-    "import hashlib\n",
     "import os\n",
     "import re\n",
     "\n",
@@ -379,7 +378,7 @@
     "\n",
     "from datetime import datetime\n",
     "\n",
-    "def short_evaluation(target: CompanyProduct, num_threads=2):\n",
+    "def short_evaluation(target: CompanyProduct, num_threads=2, min_comments=2):\n",
     "    # Make the output folder\n",
     "    folder_name = re.sub(r\"[^a-zA-Z0-9]\", \"_\", f\"{target.company} {target.product}\")\n",
     "    folder_path = f\"evaluation/{folder_name}\"\n",
@@ -388,13 +387,30 @@
     "    reddit_client = reddit.init()\n",
     "\n",
     "    # Search for URLs\n",
-    "    post_urls = reddit.find_submission_urls(target, num_results=10)[:num_threads]\n",
+    "    post_urls = reddit.find_submission_urls(target, num_results=10)\n",
     "\n",
     "    # Fetch the Submissions from Reddit\n",
     "    post_submissions = [reddit_client.submission(url=url) for url in post_urls]\n",
     "\n",
+    "    # Filter Submissions to only those with enough comments\n",
+    "    post_submissions = [submission for submission in post_submissions if submission.num_comments >= min_comments]\n",
+    "\n",
+    "    if len(post_submissions) == 0:\n",
+    "        print(f\"No posts with enough comments found for {target}\")\n",
+    "        return\n",
+    "\n",
+    "    # Limit the number of threads\n",
+    "    post_submissions = post_submissions[:num_threads]\n",
+    "\n",
     "    # Summarize each\n",
     "    post_summaries = [summarize_submission(target, submission) for submission in post_submissions]\n",
+    "\n",
+    "    # Filter out any with over 1 hallucinated comment id\n",
+    "    post_summaries = [summary for summary in post_summaries if summary.is_under_max_hallucinations(1, debug=True)]\n",
+    "\n",
+    "    if len(post_summaries) == 0:\n",
+    "        print(f\"No valid summaries found for {target}\")\n",
+    "        return\n",
     "\n",
     "    # Aggregate the summaries\n",
     "    aggregate_summary = summarize_summaries(target, post_summaries)\n",
@@ -413,24 +429,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Results for CompanyProduct(company='Rad AI', product='Omni') saved to evaluation/Rad_AI_Omni/20240729_100729.html\n",
-      "Results for CompanyProduct(company='Singularity 6', product='Palia') saved to evaluation/Singularity_6_Palia/20240729_100844.html\n",
-      "Text too long: 237526 > 40000. Truncating.\n",
-      "Results for CompanyProduct(company='Instacart', product='Instacart') saved to evaluation/Instacart_Instacart/20240729_101004.html\n"
+      "Filtering Is the Grey Matter DNA Asmuths? with evaluation Evaluation(claims_made=4, quotes_in_source=2, comment_ids_in_source=2)\n",
+      "Results for CompanyProduct(company='Rad AI', product='Omni') saved to evaluation/Rad_AI_Omni/20240729_112333.html\n"
      ]
     }
    ],
    "source": [
     "short_evaluation(CompanyProduct(\"Rad AI\", \"Omni\"), 5)\n",
-    "short_evaluation(CompanyProduct(\"Singularity 6\", \"Palia\"), 5)\n",
-    "short_evaluation(CompanyProduct.same(\"Instacart\"), 5)\n"
+    "# short_evaluation(CompanyProduct(\"Singularity 6\", \"Palia\"), 5)\n",
+    "# short_evaluation(CompanyProduct.same(\"Instacart\"), 5)\n"
    ]
   },
   {
