--- a/src/reddit.ipynb
+++ b/src/reddit.ipynb
@@ -357,14 +357,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Results for CompanyProduct(company='98point6', product='98point6') saved to evaluation/98point6_98point6/20240729_112250.html\n"
+      "Results for CompanyProduct(company='98point6', product='98point6') saved to evaluation/98point6_98point6/20240729_115652.html\n"
      ]
     }
    ],
@@ -377,6 +377,7 @@
     "from reddit_summarizer import summarize_submission, summarize_summaries\n",
     "\n",
     "from datetime import datetime\n",
+    "from collections import ChainMap\n",
     "\n",
     "def short_evaluation(target: CompanyProduct, num_threads=2, min_comments=2):\n",
     "    # Make the output folder\n",
@@ -411,6 +412,9 @@
     "    if len(post_summaries) == 0:\n",
     "        print(f\"No valid summaries found for {target}\")\n",
     "        return\n",
+    "    \n",
+    "    # Index permalinks\n",
+    "    permalinks = ChainMap(*[reddit.index_permalinks(summary.submission) for summary in post_summaries])\n",
     "\n",
     "    # Aggregate the summaries\n",
     "    aggregate_summary = summarize_summaries(target, post_summaries)\n",
@@ -420,7 +424,7 @@
     "    filename = f\"{folder_path}/{timestamp}.html\"\n",
     "\n",
     "    with open(filename, \"w\") as f:\n",
-    "        f.write(aggregate_summary.to_html())\n",
+    "        f.write(aggregate_summary.to_html(permalinks=permalinks))\n",
     "\n",
     "    print(f\"Results for {target} saved to {filename}\")\n",
     "\n",
@@ -445,6 +449,48 @@
     "short_evaluation(CompanyProduct(\"Rad AI\", \"Omni\"), 5)\n",
     "# short_evaluation(CompanyProduct(\"Singularity 6\", \"Palia\"), 5)\n",
     "# short_evaluation(CompanyProduct.same(\"Instacart\"), 5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'11twe7z': '/r/ChatGPT/comments/11twe7z/prompt_to_summarize/',\n",
+      " 'jcm7h9z': '/r/ChatGPT/comments/11twe7z/prompt_to_summarize/jcm7h9z/',\n",
+      " 'jf2x8tv': '/r/ChatGPT/comments/11twe7z/prompt_to_summarize/jf2x8tv/',\n",
+      " 'jf3qdny': '/r/ChatGPT/comments/11twe7z/prompt_to_summarize/jf3qdny/',\n",
+      " 'jf3qr9a': '/r/ChatGPT/comments/11twe7z/prompt_to_summarize/jf3qr9a/',\n",
+      " 'jf3w7dk': '/r/ChatGPT/comments/11twe7z/prompt_to_summarize/jf3w7dk/',\n",
+      " 'jqcmckq': '/r/ChatGPT/comments/11twe7z/prompt_to_summarize/jqcmckq/',\n",
+      " 'jyrpv2g': '/r/ChatGPT/comments/11twe7z/prompt_to_summarize/jyrpv2g/',\n",
+      " 'kvxa6ye': '/r/ChatGPT/comments/11twe7z/prompt_to_summarize/kvxa6ye/',\n",
+      " 'kwo1bpp': '/r/ChatGPT/comments/11twe7z/prompt_to_summarize/kwo1bpp/',\n",
+      " 'l16umyv': '/r/ChatGPT/comments/11twe7z/prompt_to_summarize/l16umyv/'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test permalinks\n",
+    "import reddit\n",
+    "\n",
+    "def test_index_permalinks():\n",
+    "    \"\"\"Test that we can index permalinks in a Reddit thread\"\"\"\n",
+    "    reddit_client = reddit.init()\n",
+    "\n",
+    "    submission = reddit_client.submission(\n",
+    "        url=\"https://www.reddit.com/r/ChatGPT/comments/11twe7z/prompt_to_summarize/\"\n",
+    "    )\n",
+    "    return reddit.index_permalinks(submission)\n",
+    "\n",
+    "links = test_index_permalinks()\n",
+    "\n",
+    "from pprint import pprint\n",
+    "pprint(links)"
    ]
   },
   {
