Refactoring Glassdoor into a module

--- a/src/glassdoor.ipynb
+++ b/src/glassdoor.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,138 +35,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['https://www.glassdoor.com/Reviews/Rad-AI-Reviews-E3543079.htm',\n",
-       " 'https://www.glassdoor.com/Reviews/Rad-AI-team-Reviews-EI_IE3543079.0,6_KH7,11.htm',\n",
-       " 'https://www.glassdoor.com/Reviews/Rad-AI-Berkeley-Reviews-EI_IE3543079.0,6_IL.7,15_IC1147330.htm',\n",
-       " 'https://www.glassdoor.com/Reviews/Rad-AI-Head-of-Research-Reviews-EI_IE3543079.0,6_KO7,23.htm']"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['https://www.glassdoor.com/Reviews/Rad-AI-Reviews-E3543079.htm', 'https://www.glassdoor.com/Reviews/Rad-AI-team-Reviews-EI_IE3543079.0,6_KH7,11.htm', 'https://www.glassdoor.com/Reviews/Rad-AI-Berkeley-Reviews-EI_IE3543079.0,6_IL.7,15_IC1147330.htm', 'https://www.glassdoor.com/Reviews/Rad-AI-Head-of-Research-Reviews-EI_IE3543079.0,6_KO7,23.htm']\n"
+     ]
     }
    ],
    "source": [
-    "# search for a company\n",
-    "from googlesearch import search\n",
-    "from core import CompanyProduct\n",
-    "import re\n",
+    "from glassdoor.search import find_review_url\n",
     "\n",
-    "def find_review_urls(\n",
-    "    target: CompanyProduct, pause_seconds=2\n",
-    "):\n",
-    "    query = f'site:www.glassdoor.com/Reviews/ \"{target.company}\"\"'\n",
-    "\n",
-    "    return list(\n",
-    "        url\n",
-    "        for url in search(\n",
-    "            query, num=10, stop=10, pause=pause_seconds\n",
-    "        )\n",
-    "        if re.match(r\".*-Reviews-.*\", url)\n",
-    "    )\n",
-    "\n",
-    "urls = find_review_urls(target)\n",
-    "url = urls[0]\n",
-    "\n",
-    "urls"
+    "url = find_review_url(target, debug=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-07-29 16:39:58.734\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m107\u001b[0m - \u001b[1mscraping reviews from https://www.glassdoor.com/Reviews/Rad-AI-Reviews-E3543079.htm\u001b[0m\n",
-      "\u001b[32m2024-07-29 16:39:59.905\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m115\u001b[0m - \u001b[1mscraped first page of reviews of https://www.glassdoor.com/Reviews/Rad-AI-Reviews-E3543079.htm, scraping remaining 1 pages\u001b[0m\n",
-      "\u001b[32m2024-07-29 16:40:02.423\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m125\u001b[0m - \u001b[1mscraped 13 reviews from https://www.glassdoor.com/Reviews/Rad-AI-Reviews-E3543079.htm in 2 pages\u001b[0m\n"
+      "\u001b[32m2024-07-29 18:01:13.614\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.scraper\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m110\u001b[0m - \u001b[1mscraping reviews from https://www.glassdoor.com/Reviews/Rad-AI-Reviews-E3543079.htm\u001b[0m\n",
+      "\u001b[32m2024-07-29 18:01:13.959\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.scraper\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m118\u001b[0m - \u001b[1mscraped first page of reviews of https://www.glassdoor.com/Reviews/Rad-AI-Reviews-E3543079.htm, scraping remaining 1 pages\u001b[0m\n",
+      "\u001b[32m2024-07-29 18:01:15.469\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.scraper\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m128\u001b[0m - \u001b[1mscraped 13 reviews from https://www.glassdoor.com/Reviews/Rad-AI-Reviews-E3543079.htm in 2 pages\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "import glassdoor\n",
+    "from glassdoor.scraper import scrape_reviews, GlassdoorReview\n",
     "\n",
-    "glassdoor.BASE_CONFIG[\"cache\"] = True\n",
-    "\n",
-    "async def fetch_reviews(url):\n",
-    "    result_reviews = await glassdoor.scrape_reviews(url, max_pages=3)\n",
-    "    return result_reviews\n",
-    "\n",
-    "glassdoor_results = await fetch_reviews(url)\n",
-    "\n",
-    "# from pprint import pprint\n",
-    "# pprint(results)"
+    "glassdoor_results = await scrape_reviews(url, max_pages=3)\n",
+    "reviews = GlassdoorReview.parse_reviews(glassdoor_results)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datetime import datetime\n",
-    "from typing import NamedTuple, Optional\n",
-    "\n",
-    "class GlassdoorReview(NamedTuple):\n",
-    "    \"\"\"Wrapper around a Glassdoor review to make autocomplete easier\"\"\"\n",
-    "    # raw fields\n",
-    "    advice: Optional[str]\n",
-    "    cons: Optional[str]\n",
-    "    lengthOfEmployment: int\n",
-    "    pros: Optional[str]\n",
-    "    ratingOverall: int\n",
-    "    reviewId: int\n",
-    "    summary: str\n",
-    "\n",
-    "    # processed fields\n",
-    "    jobTitle: Optional[str]\n",
-    "    dateTime: datetime\n",
-    "\n",
-    "    \n",
-    "    @classmethod\n",
-    "    def from_dict(cls, advice, cons, lengthOfEmployment, pros, ratingOverall, reviewId, summary, jobTitle, reviewDateTime, **_kwargs):\n",
-    "        job_title = jobTitle[\"text\"] if jobTitle else None\n",
-    "        date_time = datetime.strptime(reviewDateTime, \"%Y-%m-%dT%H:%M:%S.%f\")\n",
-    "\n",
-    "        return cls(\n",
-    "            advice, cons, lengthOfEmployment, pros, ratingOverall, reviewId, summary, job_title, date_time\n",
-    "        )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import jinja2\n",
-    "\n",
-    "templates = jinja2.Environment(\n",
-    "    loader=jinja2.FileSystemLoader(\"templates\"),\n",
-    ")\n",
-    "\n",
-    "parsed_reviews = [\n",
-    "    GlassdoorReview.from_dict(**review)\n",
-    "    for review in glassdoor_results[\"reviews\"]\n",
-    "]\n",
-    "parsed_reviews = sorted(parsed_reviews, key=lambda x: x.dateTime, reverse=False)\n",
-    "\n",
-    "# for review in parsed_reviews:\n",
-    "#     print(templates.get_template(\"glassdoor_review.md\").render(review=review))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -184,12 +94,12 @@
       "- Open and supportive leadership is noted in several positive reviews.\n",
       "\n",
       "**Cons:**\n",
-      "- Many reviews criticize the current leadership as egotistical, inexperienced, and incompetent, leading to a toxic work culture.\n",
-      "- There are reports of animosity among co-founders and a lack of trust in employees, with meetings being recorded due to distrust.\n",
+      "- Many reviews criticize the current leadership for being egotistical, inexperienced, and incompetent.\n",
+      "- There are reports of a toxic culture stemming from dysfunctional leadership and a lack of trust in employees.\n",
       "\n",
       "**Quotations:**\n",
       "- \"Egotistical, inexperienced, incompetent leadership\" (Senior Software Engineer on 2021-04-13)\n",
-      "- \"Co-Founders are wonderful. Jeff Chang is one of a human's smartest, most humble gems.\" (Anonymous on 2023-02-17)\n",
+      "- \"Co-Founders are wonderful... The next level of leadership is where the problem lies.\" (Anonymous on 2023-02-17)\n",
       "\n",
       "### Compensation and Benefits\n",
       "**Pros:**\n",
@@ -197,7 +107,7 @@
       "- Equity is noted as likely to be valuable.\n",
       "\n",
       "**Cons:**\n",
-      "- Some reviews indicate that compensation is not competitive with larger companies and that there are frequent payroll issues.\n",
+      "- Some reviews indicate that compensation is not competitive with larger companies.\n",
       "\n",
       "**Quotations:**\n",
       "- \"Great pay. Decent benefits.\" (Senior Software Engineer on 2021-04-13)\n",
@@ -205,14 +115,14 @@
       "\n",
       "### Diversity, Equity, and Inclusion\n",
       "**Pros:**\n",
-      "- Some reviews mention a caring environment and a focus on integrating diverse teams of clinicians and computer scientists.\n",
+      "- Some reviews mention a lack of overt harassment, indicating a positive environment in that regard.\n",
       "\n",
       "**Cons:**\n",
       "- Significant concerns about the lack of women in leadership and microaggressions against female employees are highlighted.\n",
-      "- Reports of sexist and xenophobic comments being tolerated.\n",
+      "- Reports of sexist comments and a culture that does not support diversity.\n",
       "\n",
       "**Quotations:**\n",
-      "- \"Everything started great - until I realized the lack of women in leadership positions.\" (Anonymous on 2023-02-17)\n",
+      "- \"I would caution you to provide feedback... a few began sharing their dissatisfaction; it was brought up in team meetings about 'negativity,' and they were let go shortly after.\" (Anonymous on 2023-02-17)\n",
       "\n",
       "### Work-Life Balance\n",
       "**Pros:**\n",
@@ -230,97 +140,44 @@
       "- Many reviews highlight opportunities for personal and professional growth, with supportive leadership and a mission-driven environment.\n",
       "\n",
       "**Cons:**\n",
-      "- The fast-paced startup culture may not suit everyone, and some employees may find the lack of structure challenging.\n",
+      "- The fast-paced nature of a startup can be challenging for some employees.\n",
       "\n",
       "**Quotations:**\n",
       "- \"Lots of room to define your role.\" (Medical Intern on 2021-05-04)\n",
-      "- \"Things can change quickly.\" (Anonymous on 2024-03-28)\n",
+      "- \"Startup culture is dynamic & not for everyone.\" (Advisor on 2021-05-21)\n",
       "\n",
       "### Company Culture\n",
       "**Pros:**\n",
-      "- A strong sense of teamwork and mission-driven culture is praised, with many employees feeling valued.\n",
+      "- A strong sense of teamwork and mission-driven culture is praised.\n",
+      "- Many employees feel valued and supported.\n",
       "\n",
       "**Cons:**\n",
-      "- Reports of a toxic culture due to poor leadership and interpersonal conflicts, particularly among certain team members.\n",
+      "- Reports of a toxic culture due to poor leadership and internal politics.\n",
       "\n",
       "**Quotations:**\n",
       "- \"Amazing team driven towards making a positive impact.\" (Anonymous on 2022-04-01)\n",
       "- \"The overall morale is low, and there's a pervasive sense of disillusionment among employees.\" (Talent Acquisition on 2024-07-23)\n",
       "\n",
-      "## Company Changes Over Time\n",
-      "The reviews suggest a mixed evolution. Initially, the company was praised for its leadership and mission-driven culture, but as it grew, issues with leadership dynamics, particularly regarding trust and inclusivity, have surfaced. The presence of toxic behaviors and a lack of support for certain employee groups have become more pronounced.\n",
+      "## Changes Over Time\n",
+      "The reviews suggest a mixed evolution of the company. While some employees have experienced positive growth and a supportive environment, others have noted a decline in leadership quality and an increase in toxicity. The presence of strong co-founders contrasts with the criticisms of middle management, indicating a potential disconnect as the company has scaled.\n",
       "\n",
-      "## Relationship Between Job Functions and Employee Satisfaction\n",
-      "Employee satisfaction appears to vary significantly by job function. Technical roles, such as software engineering and data science, often report positive experiences, while roles in talent acquisition and operations express dissatisfaction with management and support. This suggests that satisfaction may be closely tied to the effectiveness of leadership and the nature of the work environment within specific teams.\n",
+      "## Job Functions and Employee Satisfaction\n",
+      "Employee satisfaction appears to vary significantly by job function. Technical roles, such as software engineering and data science, often report positive experiences, while roles in talent acquisition and operations express dissatisfaction with management and support. This suggests that the alignment of job function with company culture and leadership quality plays a crucial role in overall employee satisfaction.\n",
       "\n",
       "## Questions for Leadership\n",
-      "1. What steps are being taken to address the concerns regarding leadership effectiveness and employee trust?\n",
+      "1. What steps are being taken to address the concerns regarding leadership quality and employee trust?\n",
       "2. How does the company plan to improve diversity and inclusion, particularly in leadership roles?\n",
       "3. What measures are in place to ensure competitive compensation and resolve payroll issues promptly?\n",
-      "4. How does the company plan to foster a more positive and collaborative work environment?\n",
-      "5. Can you elaborate on the company's strategy for growth and how it plans to maintain a healthy work-life balance for employees?\n",
-      "6. What initiatives are in place to support employee feedback and ensure it leads to actionable changes?\n"
+      "4. How does the company intend to foster a more positive and collaborative work environment?\n",
+      "5. Can you provide more clarity on the company's long-term vision and how it plans to achieve product-market fit?\n"
      ]
     }
    ],
    "source": [
-    "concat_reviews = \"\\n\\n\".join(\n",
-    "    templates.get_template(\"glassdoor_review.md\").render(review=review)\n",
-    "    for review in parsed_reviews\n",
-    ")\n",
+    "from glassdoor.summarizer import summarize\n",
     "\n",
-    "print(f\"The prompt context has {len(concat_reviews):,} characters in {len(parsed_reviews)} reviews\")\n",
-    "\n",
-    "from langchain_openai import ChatOpenAI\n",
-    "from langchain_core.prompts import ChatPromptTemplate\n",
-    "\n",
-    "review_summary_prompt = ChatPromptTemplate.from_messages(\n",
-    "    [\n",
-    "        (\n",
-    "            \"system\",\n",
-    "            \"\"\"\n",
-    "            Please read the following Glassdoor reviews and write a summary of the key pros, cons, and quotations relating to the following aspects of the company:\n",
-    "            - Leadership\n",
-    "            - Compensation and benefits\n",
-    "            - Diversity, equity, and inclusion\n",
-    "            - Work-life balance\n",
-    "            - Growth opportunities\n",
-    "            - Company culture\n",
-    "\n",
-    "            Please also include a section summarizing how the company has changed over time, if applicable.\n",
-    "\n",
-    "            Please also summarize the relationship between job functions and employee satisfaction.\n",
-    "\n",
-    "            Finish the summary with a list of questions that you would ask the company's leadership both following up on the reviews and also asking about topics that were not mentioned in the reviews.\n",
-    "\n",
-    "            Provide a clear and concise summary of the key points, avoiding unnecessary details.\n",
-    "            Format the response as Markdown.\n",
-    "\n",
-    "            In quotations please format like: \"quote\" (job title on date)\n",
-    "            \"\"\",\n",
-    "        ),\n",
-    "        (\n",
-    "            \"human\",\n",
-    "            \"\"\"\n",
-    "            Company: {company}\n",
-    "            \n",
-    "            Glassdoor reviews: \n",
-    "            {text}\n",
-    "            \"\"\",\n",
-    "        ),\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0)\n",
-    "runnable = review_summary_prompt | llm\n",
-    "summary_result = runnable.invoke(\n",
-    "    {\n",
-    "        \"text\": concat_reviews,\n",
-    "        \"company\": target.company,\n",
-    "    }\n",
-    ")\n",
-    "\n",
-    "print(summary_result.content)"
+    "summary = summarize(target, reviews)\n",
+    "print(summary.content)"
    ]
   },
   {
